# database01

./: LICENSE  README.md  olist_database_project.ipynb  olist_ecommerce.drawio  pyproject.toml
olist_brazil_ecommerce_data/: olist_ecommerce.drawio  olist_order_payments_dataset.csv:Zone.Identifier
