[tool.poetry]
name = "db01"
version = "0.1.0"
description = "database design and creation // python, sql, postgres"
authors = ["Gabe Godish <gabegodish@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
pyparsing = "^3.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
